--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
+body {
+  background-color: #92591e;
+  color: #fff;
+  font-family: 'Indie Flower', cursive; }
+
+.form-group {
+  margin-left: 9%;
+  display: inline-block;
+  position: fixed;
+  bottom: 53px; }
+
+.input-area {
+  border-radius: 14px; }
+
+button {
+  width: 20%;
+  margin-left: 20%; }
+
+.listItems {
+  margin-left: 45%;
+  margin-top: 15px;
+  text-align: justify;
+  width: 52%;
+  height: 119px; }
+
 .hidden {
   display: none; }
 
