--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ body {
   border-radius: 14px; }
 
 button {
-  width: 20%;
-  margin-left: 20%; }
+  width: 30%;
+  margin-top: 5px;
+  margin-left: 10%;
+  }
 
 .listItems {
   margin-left: 45%;
